Revert "Fixed issue where the changing the graph type would flicker the main page. Smoother interface"
This reverts commit 407814422cf20cb8334e8f3eaaf8e1a0484cd0a6.

--- a/.style/page_style.css
+++ b/.style/page_style.css
@@ -6,7 +6,3 @@
 .st-emotion-cache-ue6h4q {
     color: rgb(255 255 255);
 }
-
-.st-emotion-cache-5rimss {
-    color: rgb(255 255 255);
-}
